[package]
name = "signal_protocol_poc"
version = "0.1.0"
edition = "2024"

[dependencies]
hkdf = "0.12.4"
rand = "0.8"
rand_core = "0.6.4"
sha2 = "0.10.9"
x25519-dalek = { version = "2.0.1", features = ["static_secrets"] }
chrono = { version = "0.4", features = ["serde", "clock"] }
serde = { version = "1.0.219", features = ["derive"] }
uuid = { version = "1.17.0", features = ["v4"] }
ed25519-dalek = "2.2.0"
hex = "0.4.3"
chacha20poly1305 = { version = "0.10", features = ["alloc"] }